# for-tracy

./: package-lock.json  package.json  permitflow.db  permitflow.db-shm  permitflow.db-wal  pyproject.toml  render.yaml  requirements.txt  vercel.json
.vercel_python_packages/fastapi-0.136.3.dist-info/: RECORD
.vercel_python_packages/httptools-0.8.0.dist-info/: RECORD
.vercel_python_packages/idna-3.17.dist-info/: RECORD
.vercel_python_packages/numpy-2.4.6.dist-info/: RECORD
.vercel_python_packages/pandas-3.0.3.dist-info/: RECORD
.vercel_python_packages/psycopg2_binary-2.9.12.dist-info/: RECORD
.vercel_python_packages/pydantic_core-2.46.4.dist-info/: RECORD
.vercel_python_packages/python_dotenv-1.2.2.dist-info/: RECORD
.vercel_python_packages/sqlalchemy-2.0.50.dist-info/: RECORD
.vercel_python_packages/starlette-1.2.0.dist-info/: RECORD
.vercel_python_packages/uvicorn-0.48.0.dist-info/: RECORD
.vercel_python_packages/watchfiles-1.2.0.dist-info/: RECORD
api/: hello.py  index.py
engine/: comparison.py  diff.py  filename_parser.py  mock_data.py  orchestrator.py  parser.py  status.py  summary.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  (+1 more)
permitflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: vercel-build.sh
server/: app.py
store/: interface.py  postgres_store.py  sqlite_store.py
tests/: test_communities.py  test_comparison.py  test_engine.py  test_filename_date_upload.py  test_filename_parser.py  test_smoke_real.py  test_summary.py
(+11 files in other folders)
